[gd_scene load_steps=3 format=3 uid="uid://duc3hursa86r2"]

[ext_resource type="PackedScene" uid="uid://bcode0jxaqnr6" path="res://scenes/UI/cooldowns_bar/cooldown_icon.tscn" id="1_6uyy6"]
[ext_resource type="Script" path="res://scenes/UI/cooldowns_bar/cooldowns_bar.gd" id="1_rjdg8"]

[node name="CooldownsBar" type="Node2D"]
script = ExtResource("1_rjdg8")

[node name="CooldownIcon1" parent="." instance=ExtResource("1_6uyy6")]

[node name="CooldownIcon2" parent="." instance=ExtResource("1_6uyy6")]
position = Vector2(0, 31)

[node name="CooldownIcon3" parent="." instance=ExtResource("1_6uyy6")]
position = Vector2(0, 62)
